@@ -28,6 +28,10 @@ For the duration of the current procedure
 any reference to any of the \fIvarname\fRs
 will refer to the global variable by the same name.
 .PP
+\fIvarname\fR is always treated as the name of a variable, not an
+array element.  An error is returned if the name looks like an array element,
+such as \fBa(b)\fR.
+
 
 .SH "SEE ALSO"
 namespace(n), upvar(n), variable(n)
