@@ -35,8 +35,8 @@ call;  it will be created the first time \fImyVar\fR is referenced, just like
 an ordinary variable.  There must not exist a variable by the
 name \fImyVar\fR at the time \fBupvar\fR is invoked.
 \fIMyVar\fR is always treated as the name of a variable, not an
-array element.  Even if the name looks like an array element,
-such as \fBa(b)\fR, a regular variable is created.
+array element.  An error is returned if the name looks like an array element,
+such as \fBa(b)\fR.
 \fIOtherVar\fR may refer to a scalar variable, an array,
 or an array element.
 \fBUpvar\fR returns an empty string.
